# lightswitch

./: Cargo.toml  README.md  lightswitch.json
src/: cli_parser.rs  config.rs  lightswitch.rs  main.rs
src/lightswitch/: config.rs
